--- a/.config
+++ b/.config
@@ -1943,8 +1943,9 @@ CONFIG_ARCH_MIGHT_HAVE_PC_PARPORT=y
 #
 # Congatec CGOS API driver
 #
-CONFIG_CGOS=m
-CONFIG_CGOS_SBR=m
+CONFIG_CGOS=y
+CONFIG_CGOS_I2C=m
+CONFIG_CGOS_SBR=y
 # end of Congatec CGOS API driver
 
 CONFIG_PNP=y
