--- a/drivers/cgosdrv/Makefile
+++ b/drivers/cgosdrv/Makefile
@@ -1,5 +1,6 @@
 cgosdrv-objs := DrvLx.o DrvOsaLx.o Cgeb.o CgosDrv.o
 
 obj-$(CONFIG_CGOS) 	+= cgosdrv.o
+obj-$(CONFIG_CGOS_I2C)	+= cgos-i2c.o
 obj-$(CONFIG_CGOS_SBR)	+= cgos-sbr.o
 clean-files := *.o
