ath6kl enable and unset IFF_LOWER_UP flags when stopping AP mode

--- a/.config
+++ b/.config
@@ -2556,7 +2556,10 @@ CONFIG_ATH9K_PCOEM=y
 # CONFIG_ATH9K_HTC is not set
 # CONFIG_ATH9K_HWRNG is not set
 # CONFIG_CARL9170 is not set
-# CONFIG_ATH6KL is not set
+CONFIG_ATH6KL=m
+CONFIG_ATH6KL_SDIO=m
+CONFIG_ATH6KL_USB=m
+# CONFIG_ATH6KL_DEBUG is not set
 # CONFIG_AR5523 is not set
 # CONFIG_WIL6210 is not set
 # CONFIG_ATH10K is not set
